--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,4 +5,10 @@
     <string name="title_notifications">Notifications</string>
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="xbox">Xbox</string>
+    <string name="nintendo_switch">Nintendo Switch</string>
+    <string name="playstation">Playstation</string>
+    <string name="pc">PC</string>
+
+
 </resources>
